# KitchenGuard

./: .gitignore  1hour-runtime-test  Cargo.toml  README.md
.github/workflows/: rust.yml
MQTT_files/: Controller.py  README.md  pubPy.py  subPy.py
MQTT_files/cep2appGIT/: Cep2Controller.py  Cep2Eveman.py  Cep2Main.py  Cep2Model.py  Cep2WebClient.py  Cep2Zigbee2mqttClient.py  MQTT_Listener.py  environment.py  heartbeat_class.py  logic.py
ProjectFiles/: ProjectFilesLinks.md  Requirementsspecification.docx
WebHandler/: data.json  forside.html  index.html  indstillinger.html  om.html  stats.html  stylesheet.css
controller/: MQTT_Listener.py  Main.py  Worker.py  environment.py  heartbeat_class.py  logic.py
rust-server101/actix-server/: Cargo.toml
rust-server101/actix-server/src/: GuarsSessionStore.rs  classes.rs  lib.rs  main.rs  netværkskonfiguration.md
rust-server101/actix-server/src/classes/: JobScheduler.rs  StateHandler.rs  StateServer.rs  WebServer.rs  cookie_handler.rs  cookie_manager.rs  job_scheduler.rs  mod.rs  pi_communicator.rs  shared_struct.rs  state_handler.rs  web_handler.rs
rust-server101/actix-server/src/routes/: api.rs  browser.rs  mod.rs
rust-server101/actix-server/src/templates/: forside.html  index.html  stats.html  stylesheet.css
rust-server101/actix-server/src/tests/: integration_tests.rs  test_job_scheduler.rs
rust-server101/actix-server/tests/: integration_tests.rs
src/: main.rs
src/classes/: cookie_manager.rs  job_scheduler.rs  pi_communicator.rs  shared_struct.rs  state_handler.rs  web_handler.rs
src/routes/: api.rs  browser.rs
tests/: integration_tests.rs
(+5 files in other folders)
