[package]
name = "kitchen_guard_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix = "0.13"
actix-rt = "2.10.0"
actix-cors = "0.7.1"
actix-session = { version = "0.10.1", features = ["cookie-session"]}
tokio = "1.45.0"
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
ring = "0.17.14"
data-encoding = "2.9.0" 
rand = { version = "0.9.1", features = ["std"] }
futures-util = "0.3.31"
serial_test = "3.2.0"
reqwest = { version = "0.12.15", features = ["json"] }
actix-files = "0.6.6"
base64 = "0.22.1"
serde_json = "1.0.140"
dotenv = "0.14.0"