[package]
name = "actix-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-cors = "0.7.1"
actix-session = "0.10.1"
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }
